# easy_mpc

./: .clang-format  .gitignore  AST_GENERATOR_PLAN.md  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/workflows/: c-cpp.yml
cmake/: EasyPcMacros.cmake
docs/: AST_BUILDER_API.md  GDL_Language_Description.md  HOWTO_easy_mpc.md
examples/: CMakeLists.txt
examples/arithmetic_parser/: CMakeLists.txt  ast_builder.c  ast_builder.h  grammar.c
examples/code_gen/: CMakeLists.txt  main.c
examples/json_parser/: CMakeLists.txt  implementation_plan.md  json_ast.h  json_ast_actions.c  json_ast_actions.h  json_grammar.c  json_grammar.h  main.c  semantic_actions.h
examples/json_parser/test_data/: fail4.json  fail6.json  test6.json  test7.json
examples/json_pointer/: CMakeLists.txt  json_pointer.gdl  main.c
examples/simple_calc/: CMakeLists.txt  grammar.c  main.c  simple_calc_ast_actions.c
include/easy_pc/: easy_pc.h  easy_pc_ast.h
lib/: CMakeLists.txt  child_list.c  child_list.h  cpt_printer.c  easy_pc.c  easy_pc_ast.c  easy_pc_private.h  parsers.c
tests/: AstBuilderTest.cpp  CMakeLists.txt  CombinatorNewTest.cpp  CombinatorTest.cpp  CptPrinterTest.cpp  CptVisitorTest.cpp  ErrorHandlingTest.cpp  GdlAstBuilderTest.cpp  GdlParserTest.cpp  GeneratedParserTest.cpp  ParserListTest.cpp  SatisfyTest.cpp  StreamingTest.cpp  TerminalParsersNewTest.cpp  TerminalParsersTest.cpp  WrapTest.cpp
tools/gdl_compiler/: CMakeLists.txt  gdl_ast.h  gdl_bootstrap_generator.c  gdl_bootstrap_generator.h  gdl_code_generator.c  gdl_code_generator.h  gdl_compiler_ast_actions.c  gdl_compiler_ast_actions.h  gdl_parser.c  main.c
tools/gdl_compiler/examples/: gdl.gdl  satisfy.gdl  test_c_comment.gdl  test_comment.gdl  wrap.gdl
tools/gdl_debug/: bad.gdl  gdl_debug.sh  template_main.c
